--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.24.1"
 pytest-asyncio = "^0.21.1"
 flake8 = "^6.0.0"
 python-multipart = "^0.0.6"
+pydantic = "^2.1.1"
 
 
 [build-system]
