--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,10 @@ services:
 
   mongodb:
     image: mongo:6-jammy
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=1234
+      - MONGO_INITDB_DATABASE=notification
     ports:
       - "27017:27017"
     volumes:
