--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,11 +14,10 @@ services:
       - custom
 
   mongodb:
-    image: mongo:6-jammy
+    image: mongo:latest
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=1234
-      - MONGO_INITDB_DATABASE=notification
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: 1234
     ports:
       - "27017:27017"
     volumes:
